private-dormitory/force-app/main/default/objects/Invoice__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the booking this invoice is generated for. Used to link the invoice with the corresponding guest stay, reservation details, and charges.</description>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>