private-dormitory/force-app/main/default/objects/Invoice__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the resident associated with this invoice. Used to identify the person responsible for the charges.</description>
    <label>Resident</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>